# electron-vue-lite

./: .gitignore  README.md  electron-builder.json5  package.json  tsconfig.json  uncocss.config.ts  unocss.config.ts  vite.config.ts
docs/: UPDATE_GUIDE.md
electron/: electron-env.d.ts
electron/main/: index.ts
electron/main/handlers/: appHandler.ts  pythonServiceHandler.ts  storeHandler.ts  updateHandler.ts  windowHandler.ts
electron/main/services/: pythonService.ts
electron/main/store/: store.ts
electron/main/window/: WindowManager.ts  menu.ts
electron/preload/: index.ts
electron/preload/bridges/: app.ts  ipc.ts  pythonService.ts  store.ts  update.ts  window.ts  windowControls.ts
python-project/ele-py/: README.md  config.py  main.py  models.py  pyproject.toml
python-project/ele-py/api/: __init__.py  http_routes.py  websocket_handler.py
python-project/ele-py/grpc_service/: __init__.py  grpc_client.py  grpc_server.py
python-project/ele-py/grpc_service/proto/: __init__.py  service.proto  service_pb2.py  service_pb2_grpc.py
scripts/: copy-pydist.js
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  route.ts  shims.d.ts  style.css
src/components/: AppSetting.vue  AppUpdater.vue  PiniaCounterDemo.vue  TitleBar.vue  WindowManagerPanel.vue
src/demos/: ipc.ts
src/hooks/: useAppActions.ts  usePythonService.ts  useWindowControls.ts  useWindowManager.ts  useWindowTitle.ts
src/stores/: appStore.ts  counterStore.ts  index.ts
src/utils/: grpcClient.ts  pythonApi.ts
src/views/: Home.vue  count.vue  index.vue  python-service.vue
(+2 files in other folders)
